--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,39 +5,52 @@
   padding: 1rem;
   padding-left: 2rem;
   position: relative;
-  overflow-x: hidden!important;
-  height: 100vh;
-  min-height: 100%;
+  overflow-x: hidden !important;
+  height: 100dvh;
+  min-height: 100dvh;
   min-width: 100vw;
   max-width: 100vw;
-  @media(max-width: 600px){
+  
+  @supports not (height: 100dvh) {
+    height: 100vh;
+    min-height: 100vh;
+  }
+
+  @media(max-width: 600px) {
     padding-left: 0.2rem;
   }
+
   &scroll {
     overflow: auto !important;
     height: 100%;
     margin-bottom: 20rem;
   }
+
   .anchor {
     padding: 2rem;
   }
+
   &.pageModalWrapper {
     width: 100%;
     overflow: auto;
     padding-bottom: 10rem;
     position: relative;
   }
-  &.pageMenuWrapper{
+
+  &.pageMenuWrapper {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     overflow: auto;
   }
+
   .contentRow {
     position: relative;
     padding-bottom: 2rem;
     width: 100%;
+    min-width: 100%;
+
     &:last-of-type {
       padding-bottom: 0;
     }
